# GUImp

./: CMakeLists.txt  Makefile  author  button_handler.c  check_null.c  checker.c  color.c  color_events.c  convert_rect_to_square.c  cursor_load.c  cursor_set.c  draw.c  draw_in_drawbox.c  editor.h  events.c  events_2.c  events_combobox.c  form_draw.c  ft_atof.c  get_pixel.c  guimp.h  guimp_draw_canvas.c  guimp_init.c  guimp_mouse1_down.c  guimp_mouseclick.c  guimp_mousewheel.c  guimp_redo.c  guimp_toggle_filled.c  guimp_undo.c  guimp_use_tool.c  init.c  load_cursors.c  main.c  menu_bar.c  menu_bar_23123767.c  menu_events.c  menu_table.c  multiple_window_delete.c  multiple_windows_create.c  multiple_windows_forms.c  (+36 more)
libft/: Makefile  ft_error.c  ft_strlen.c  get_next_line.c  libft.h
libui/: blit_surface.c  calculate_menu.c  checker.c  color.c  color_events.c  create_surface.c  create_text_surface.c  cursor.c  cursor_load.c  draw_circle.c  draw_circle_2.c  draw_line.c  draw_rect.c  draw_text.c  draw_thick_line.c  duplicate_surface.c  events.c  events_2.c  events_keydown.c  events_mouse.c  find_window_by_id.c  flood_fill.c  flood_fill_2.c  free_surface.c  generic_windows.c  get_pixel.c  init.c  keyhooks_bind_key.c  keyhooks_init.c  keyhooks_mousebuttons.c  libui.h  menu.c  menu_add.c  menu_bar_2.c  menu_table.c  menu_utils.c  new_window.c  put_pixel.c  save_jpg.c  scaled_surfaces.c  (+10 more)
libui/color_picker/: color_events.c  color_picker_window.c  color_utils.c  convert_colors.c  draw_gradients.c  draw_info.c
libui/generic_window/: generic_window_events.c  generic_windows.c  multiple_window_delete.c  multiple_windows_utils.c  return_data.c
libui/menu/: calculate_menu.c  menu.c  menu_2.c  menu_add.c  menu_bar.c  menu_events.c  menu_table.c  resize_menu.c  table_menu_events.c
libui/widgets/: widgets_create.c  widgets_delete.c  widgets_draw.c
